New validation/data/reqQueries file, changes on openapiDoc file, model/Reactions file and validation/rules file to improve use of query parameters. getAllUsers function added on controllers/users file
